Make typescript happy

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
     "noUnusedParameters": false // Report errors on unused parameters in functions
   },
   "include": ["./**/*.ts"],
+  "files": ["./src"],
   "exclude": [
     "node_modules/**/*"
   ]
